// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render dark helptooltip properly: dark 1`] = `
<HelpTooltip
  overlay={
    <div
      className="my-overlay"
    />
  }
>
  <ContextConsumer>
    <Component />
  </ContextConsumer>
</HelpTooltip>
`;

exports[`should render dark helptooltip properly: dark icon 1`] = `
<HelpIcon
  fill="rgba(0, 0, 0, 0.25)"
  fillInner="#ffffff"
  size={14}
/>
`;

exports[`should render properly: default 1`] = `
<div
  className="help-tooltip"
>
  <Tooltip
    mouseLeaveDelay={0.25}
    overlay={
      <div
        className="my-overlay"
      />
    }
  >
    <span
      className="display-inline-flex-center"
    >
      <ContextConsumer>
        <Component />
      </ContextConsumer>
    </span>
  </Tooltip>
</div>
`;

exports[`should render properly: default icon 1`] = `
<HelpIcon
  fill="#b4b4b4"
  size={12}
/>
`;
